SUBDIRS = internal

headersdir = $(ERLANG_INSTALL_LIB_DIR_exmpp)/include

dist_headers_DATA = exmpp.hrl						\
		    exmpp_caps.hrl					\
		    exmpp_nss.hrl					\
		    exmpp_xml.hrl					\
		    exmpp_xmpp.hrl					\
		    exmpp_client.hrl                \
            exmpp_jid.hrl

if BUILD_COMPAT
dist_headers_DATA +=
endif
